# QCodeEditor

./: CMakeLists.txt  README_en.md  README_zh.md
include/: QPythonExtracter  QSymbolExtracter
include/internal/: QCodeEditor.hpp  QPythonCompleter.hpp  QPythonExtracter.hpp  QSymbolExtracter.hpp
src/internal/: QCodeEditor.cpp  QFramedTextAttribute.cpp  QGLSLHighlighter.cpp  QPythonCompleter.cpp  QPythonExtracter.cpp  QPythonHighlighter.cpp
